# Garagem

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_acessório_cor_veiculo.py  0002_veiculo_capa.py  0003_alter_acessorio_options_and_more.py  0003_rename_acessório_acessorio_and_more.py
garagem/models/: marca.py  modelo.py  veiculo.py
garagem/serializers/: Veiculo.py  __init__.py
garagem/views/: Categoria.py  Veiculo.py  __init__.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
