[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Alison", email = "alisonraffaelly@gmail.com"},
]
dependencies = [
    "django>=4.2.5",
    "djangorestframework>=3.14.0",
    "setuptools>=68.2.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "drf-spectacular>=0.26.4",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
    "django-cors-headers>=4.2.0",
    "djangorestframework-simplejwt>=5.3.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
